<resources>
    <string name="app_name">MaterialDesign</string>


    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="favourite">favourite</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_Bottom_sheet">Two Clusters and a Comet</string>
    <string name="description_bottom_sheet">This lovely starfield spans some four full moons.</string>
    <string name="theme_one">Оранжевая тема</string>
    <string name="theme_second">Зеленая тема</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="two_days_ago">Two days Ago</string>
    <string name="tab_1">Tab 1</string>
    <string name="tab_2">Tab 2</string>
    <string name="tab_3">Tab 3</string>
    <string name="text_for_theme_one">Оранжево</string>
    <string name="text_for_theme_second">Зеленее!</string>
    <string name="text_for_usual_theme">Обычно</string>
    <string name="done">Done</string>
    <string name="think">Think</string>
    <string name="wht">WHT</string>
    <string name="univers">Univers</string>
    <string name="text">"Сопло ракеты было отполировано до зеркального блеска."
        "В гладком металле Ян видел свое искаженное отражение — слишком большая голова, слишком узкие плечи,"
        "торчащие как лопухи уши, растрепанная грива черных волос. Налобный фонарик горел яркой разлапистой звездой.
        "Комната смеха с кривыми зеркалами, а не пусковая установка.  — Температура плюс три! — скомандовал офицер пуска. — Втулка четыре!"
        "В руку Яна легла тяжелая бронзовая втулка. На всякий случай он глянул: убедился, что номер правильный,"
        "— и стал аккуратно, чтобы не сбить резьбу, вкручивать втулку внутрь сопла."
        "«Гром» был новой моделью баллистических ракет с улучшенной точностью попадания. Но давалось это непросто."
        "Мало того что пусковая установка должна была устанавливаться с немыслимой точностью,"
        "так еще и сама ракета настраивалась в зависимости от массы параметров: скорости ветра, температуры, срока,"
        "прошедшего с момента изготовления топлива. Шашки пороховых двигателей со временем меняли параметры горения,"
        "и это тоже надо было учитывать."</string>
    <string name="screen1">Constraint</string>
    <string name="screen2">Coordinator</string>
    <string name="screen3">Recycler</string>
    <string name="cats_description">The cat (Felis catus) is a domestic species of small carnivorous mammal. It is the only domesticated species in the family Felidae and is often referred to as the domestic cat to distinguish it from the wild members of the family.</string>
    <string name="dogs">Dogs</string>
    <string name="cats">Cats</string>

</resources>